--- a/MyBlog.WebUI/Areas/Administrator/Views/Shared/_Layout.cshtml
+++ b/MyBlog.WebUI/Areas/Administrator/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link href="~/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/node_modules/bootstrap/dist/css/bootstrap-grid.min.css" rel="stylesheet" />
     <link href="~/node_modules/select2/dist/css/select2.min.css" rel="stylesheet" />
+    <link href="~/node_modules/select2-bootstrap-theme/dist/select2-bootstrap.min.css" rel="stylesheet" />
     <link href="~/Content/styles/app.min.css" rel="stylesheet" />
     <link href="~/Content/styles/style.css" rel="stylesheet" />
 </head>
@@ -74,7 +75,7 @@
     <script src="~/node_modules/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
     <script src="~/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="~/node_modules/select2/dist/js/select2.min.js"></script>
+    <script src="~/node_modules/select2/dist/js/select2.full.min.js"></script>
     <script src="~/Content/scripts/admin-select2.js"></script>
     <script src="~/Content/scripts/admin-app.js"></script>
 </body>
