--- a/MyBlog.WebUI/Views/Home/Index.cshtml
+++ b/MyBlog.WebUI/Views/Home/Index.cshtml
@@ -2,132 +2,132 @@
 @{
     ViewData["Title"] = "Index";
 }
-    <section class="homepage-content">
-        <div class="homepage-content__about-me">
-            <img class="homepage-content__my-photo">
-            <div class="homepage-content__about-txt">
-                <span class="homepage-content__about-txt--hello">Merhaba! Ben</span>
-                <span class="homepage-content__about-txt--name">Ömer Arıyürek</span>
-                <p class="homepage-content__about-txt--about-content">
-                    A wonderful serenity has taken possession of my entire soul,
-                    like these sweet mornings of spring which I enjoy with my whole heart.
-                    I am alone, and feel the charm of existence in this spot,
-                    which was created for the bliss of souls like mine. I am so happy,
-                    my dear friend, so absorbed in the exquisite.
-                </p>
-            </div>
-            <div class="homepage-content__about-me--background-image"></div>
+<section class="homepage-content">
+    <div class="homepage-content__about-me">
+        <img class="homepage-content__my-photo">
+        <div class="homepage-content__about-txt">
+            <span class="homepage-content__about-txt--hello">Merhaba! Ben</span>
+            <span class="homepage-content__about-txt--name">Ömer Arıyürek</span>
+            <p class="homepage-content__about-txt--about-content">
+                A wonderful serenity has taken possession of my entire soul,
+                like these sweet mornings of spring which I enjoy with my whole heart.
+                I am alone, and feel the charm of existence in this spot,
+                which was created for the bliss of souls like mine. I am so happy,
+                my dear friend, so absorbed in the exquisite.
+            </p>
         </div>
-        <div class="homepage-content__recents-articles">
-            <h3 class="homepage-content__recents-articles--recents-title">Son Makaleler</h3>
-            <ul class="homepage-content__articles-list">
-                <li class="homepage-content__articles-list--item">
-                    <a href="#">
-                        <img src="./dist/img/item-phone.jpg" alt="">
-                        <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
-                        <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
-                        <p class="homepage-content__articles-list--content-summary">
-                            Far far away, behind the word mountains,
-                            far from the countries Vokalia and Consonantia,
-                            there live the blind texts. Separated they live in Bookmarksgrove...
-                        </p>
-                        <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
-                    </a>
-                </li>
-                <li class="homepage-content__articles-list--item">
-                    <a href="#">
-                        <img src="./dist/img/item-phone.jpg" alt="">
-                        <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
-                        <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
-                        <p class="homepage-content__articles-list--content-summary">
-                            Far far away, behind the word mountains,
-                            far from the countries Vokalia and Consonantia,
-                            there live the blind texts. Separated they live in Bookmarksgrove...
-                        </p>
-                        <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
-                    </a>
-                </li>
-                <li class="homepage-content__articles-list--item">
-                    <a href="#">
-                        <img src="./dist/img/item-phone.jpg" alt="">
-                        <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
-                        <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
-                        <p class="homepage-content__articles-list--content-summary">
-                            Far far away, behind the word mountains,
-                            far from the countries Vokalia and Consonantia,
-                            there live the blind texts. Separated they live in Bookmarksgrove...
-                        </p>
-                        <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
-                    </a>
-                </li>
-                <li class="homepage-content__articles-list--item">
-                    <a href="#">
-                        <img src="./dist/img/item-phone.jpg" alt="">
-                        <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
-                        <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
-                        <p class="homepage-content__articles-list--content-summary">
-                            Far far away, behind the word mountains,
-                            far from the countries Vokalia and Consonantia,
-                            there live the blind texts. Separated they live in Bookmarksgrove...
-                        </p>
-                        <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
-                    </a>
-                </li>
-                <li class="homepage-content__articles-list--item">
-                    <a href="#">
-                        <img src="./dist/img/item-phone.jpg" alt="">
-                        <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
-                        <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
-                        <p class="homepage-content__articles-list--content-summary">
-                            Far far away, behind the word mountains,
-                            far from the countries Vokalia and Consonantia,
-                            there live the blind texts. Separated they live in Bookmarksgrove...
-                        </p>
-                        <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
-                    </a>
-                </li>
-                <li class="homepage-content__articles-list--item">
-                    <a href="#">
-                        <img src="./dist/img/item-phone.jpg" alt="">
-                        <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
-                        <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
-                        <p class="homepage-content__articles-list--content-summary">
-                            Far far away, behind the word mountains,
-                            far from the countries Vokalia and Consonantia,
-                            there live the blind texts. Separated they live in Bookmarksgrove...
-                        </p>
-                        <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
-                    </a>
-                </li>
-                <li class="homepage-content__articles-list--item">
-                    <a href="#">
-                        <img src="./dist/img/item-phone.jpg" alt="">
-                        <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
-                        <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
-                        <p class="homepage-content__articles-list--content-summary">
-                            Far far away, behind the word mountains,
-                            far from the countries Vokalia and Consonantia,
-                            there live the blind texts. Separated they live in Bookmarksgrove...
-                        </p>
-                        <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
-                    </a>
-                </li>
-                <li class="homepage-content__articles-list--item">
-                    <a href="#">
-                        <img src="./dist/img/item-phone.jpg" alt="">
-                        <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
-                        <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
-                        <p class="homepage-content__articles-list--content-summary">
-                            Far far away, behind the word mountains,
-                            far from the countries Vokalia and Consonantia,
-                            there live the blind texts. Separated they live in Bookmarksgrove...
-                        </p>
-                        <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
-                    </a>
-                </li>
-            </ul>
-            <div class="homepage-content__recents-articles--more-btn">
-                <a href="load-more.html" class="btn">DEVAMINI OKU</a>
-            </div>
+        <div class="homepage-content__about-me--background-image"></div>
+    </div>
+    <div class="homepage-content__recents-articles">
+        <h3 class="homepage-content__recents-articles--recents-title">Son Makaleler</h3>
+        <ul class="homepage-content__articles-list">
+            <li class="homepage-content__articles-list--item">
+                <a href="#">
+                    <img src="./dist/img/item-phone.jpg" alt="">
+                    <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
+                    <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
+                    <p class="homepage-content__articles-list--content-summary">
+                        Far far away, behind the word mountains,
+                        far from the countries Vokalia and Consonantia,
+                        there live the blind texts. Separated they live in Bookmarksgrove...
+                    </p>
+                    <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
+                </a>
+            </li>
+            <li class="homepage-content__articles-list--item">
+                <a href="#">
+                    <img src="./dist/img/item-phone.jpg" alt="">
+                    <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
+                    <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
+                    <p class="homepage-content__articles-list--content-summary">
+                        Far far away, behind the word mountains,
+                        far from the countries Vokalia and Consonantia,
+                        there live the blind texts. Separated they live in Bookmarksgrove...
+                    </p>
+                    <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
+                </a>
+            </li>
+            <li class="homepage-content__articles-list--item">
+                <a href="#">
+                    <img src="./dist/img/item-phone.jpg" alt="">
+                    <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
+                    <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
+                    <p class="homepage-content__articles-list--content-summary">
+                        Far far away, behind the word mountains,
+                        far from the countries Vokalia and Consonantia,
+                        there live the blind texts. Separated they live in Bookmarksgrove...
+                    </p>
+                    <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
+                </a>
+            </li>
+            <li class="homepage-content__articles-list--item">
+                <a href="#">
+                    <img src="./dist/img/item-phone.jpg" alt="">
+                    <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
+                    <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
+                    <p class="homepage-content__articles-list--content-summary">
+                        Far far away, behind the word mountains,
+                        far from the countries Vokalia and Consonantia,
+                        there live the blind texts. Separated they live in Bookmarksgrove...
+                    </p>
+                    <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
+                </a>
+            </li>
+            <li class="homepage-content__articles-list--item">
+                <a href="#">
+                    <img src="./dist/img/item-phone.jpg" alt="">
+                    <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
+                    <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
+                    <p class="homepage-content__articles-list--content-summary">
+                        Far far away, behind the word mountains,
+                        far from the countries Vokalia and Consonantia,
+                        there live the blind texts. Separated they live in Bookmarksgrove...
+                    </p>
+                    <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
+                </a>
+            </li>
+            <li class="homepage-content__articles-list--item">
+                <a href="#">
+                    <img src="./dist/img/item-phone.jpg" alt="">
+                    <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
+                    <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
+                    <p class="homepage-content__articles-list--content-summary">
+                        Far far away, behind the word mountains,
+                        far from the countries Vokalia and Consonantia,
+                        there live the blind texts. Separated they live in Bookmarksgrove...
+                    </p>
+                    <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
+                </a>
+            </li>
+            <li class="homepage-content__articles-list--item">
+                <a href="#">
+                    <img src="./dist/img/item-phone.jpg" alt="">
+                    <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
+                    <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
+                    <p class="homepage-content__articles-list--content-summary">
+                        Far far away, behind the word mountains,
+                        far from the countries Vokalia and Consonantia,
+                        there live the blind texts. Separated they live in Bookmarksgrove...
+                    </p>
+                    <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
+                </a>
+            </li>
+            <li class="homepage-content__articles-list--item">
+                <a href="#">
+                    <img src="./dist/img/item-phone.jpg" alt="">
+                    <small class="homepage-content__articles-list--category">TECHNOLOGY</small>
+                    <h5 class="homepage-content__articles-list--content-title">Or It’s Now The End of Smartphones?</h5>
+                    <p class="homepage-content__articles-list--content-summary">
+                        Far far away, behind the word mountains,
+                        far from the countries Vokalia and Consonantia,
+                        there live the blind texts. Separated they live in Bookmarksgrove...
+                    </p>
+                    <span class="homepage-content__articles-list--content-date">Nisan 7, 2019</span>
+                </a>
+            </li>
+        </ul>
+        <div class="homepage-content__recents-articles--more-btn">
+            <a href="@Url.Action("Index","Post")" class="btn">DEVAMINI OKU</a>
         </div>
-    </section>
+    </div>
+</section>
